tests/fixtures/errors/invalid_autonumber_bad_format_token.puml
@startuml
autonumber 10 2 extra1 extra2
A -> B : bad
@enduml
